[tool.poetry]
name = "op-radar-test"
version = "0.1.0"
description = "Exploring Conti Radar Output"
authors = ["Sebastian"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
jupyterlab = ">=4.3.1"
pandas = ">=2.2.3"
plotly = ">=5.24.1"
pyarrow = ">=18.0.0"
streamlit = ">=1.40.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"