[project]
name = "op-radar-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyterlab>=4.3.1",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "pyarrow>=18.0.0",
    "streamlit>=1.40.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
